plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.5.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group 'io.dsub.discogs'
version '0.1.8'
sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    set('testcontainersVersion', "1.21.4")
    set('springOxmVersion', "5.3.8")
    set('jaxbApiVersion', "2.3.1")
    set('jaxbRuntimeVersion', "2.3.8")
    set('classGraphVersion', "4.8.108")
    set('pbVersion', "0.9.1")
    set('openDiscogsJooqVersion', "0.0.4")
    set('liquibaseVersion', "4.4.0")
    set('oshiVersion', "5.8.1")
}

def props = new Properties()
if (file(".env").exists()) {
    file(".env").withInputStream { props.load(it) }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

dependencies {
    implementation(
            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310',
            'org.springframework.boot:spring-boot-starter-batch',
            'org.springframework.batch:spring-batch-integration',
            'org.springframework.boot:spring-boot-starter-jooq',
            "io.dsub.opendiscogs:open-discogs-jooq:${openDiscogsJooqVersion}",
            "org.springframework:spring-oxm:${springOxmVersion}",
            "javax.xml.bind:jaxb-api:${jaxbApiVersion}",
            "org.glassfish.jaxb:jaxb-runtime:${jaxbRuntimeVersion}",
            "io.github.classgraph:classgraph:${classGraphVersion}",
            "me.tongfei:progressbar:${pbVersion}",
            "org.liquibase:liquibase-core:${liquibaseVersion}",
            "com.github.oshi:oshi-core:${oshiVersion}",
            'mysql:mysql-connector-java',
            'org.postgresql:postgresql',
            'org.projectlombok:lombok',
            'org.apache.commons:commons-lang3'
    )
    testImplementation (
            'org.junit.jupiter:junit-jupiter:5.7.2',
            'org.springframework.boot:spring-boot-starter-test',
            'org.springframework.batch:spring-batch-test',
            'org.mockito:mockito-inline:3.11.1',
            'org.testcontainers:testcontainers',
            'org.testcontainers:postgresql',
            'org.testcontainers:junit-jupiter'
    )
    annotationProcessor (
            'org.springframework.boot:spring-boot-configuration-processor',
            'org.projectlombok:lombok'
    )
    testAnnotationProcessor 'org.projectlombok:lombok'
}

test {
    useJUnitPlatform {
        excludeTags 'e2e'
    }
}

tasks.register('e2eTest', Test) {
    description = 'Runs tests that access live external services.'
    group = 'verification'
    useJUnitPlatform {
        includeTags 'e2e'
    }
    shouldRunAfter test
}

tasks.register('validateTestNaming') {
    description = 'Checks executable test classes use a recognized test suffix.'
    group = 'verification'
    def testSources = fileTree('src/test/java') {
        include '**/*.java'
    }
    inputs.files(testSources)
    doLast {
        def invalidFiles = testSources.findAll { file ->
            def source = file.getText('UTF-8')
            def containsTests =
                    source =~ /@(Test|ParameterizedTest|RepeatedTest|TestFactory)\b/
            containsTests && !(file.name ==~ /.*(UnitTest|IntegrationTest|E2ETest)\.java/)
        }
        if (!invalidFiles.isEmpty()) {
            def names = invalidFiles.collect {
                project.relativePath(it)
            }.sort().join('\n - ')
            throw new GradleException(
                    "Test classes must end in UnitTest, IntegrationTest, or E2ETest:\n - ${names}")
        }
    }
}

check.dependsOn validateTestNaming
check.dependsOn jacocoTestReport
check.dependsOn jacocoTestCoverageVerification

jacocoTestReport {
    dependsOn test
    reports {
        xml.enabled true
        html.enabled true
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.85
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.40
            }
        }
    }
}

bootBuildImage {
    setImageName("open-discogs-batch:${project.version}")
}
// disable caching
configurations.each {
    it.resolutionStrategy.each {
        it.cacheChangingModulesFor 0, 'seconds'
    }
}
